<resources>
    <string name="app_name">Calculator</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="button0">0</string>
    <string name="buttonPt">.</string>
    <string name="buttonPlus">+</string>
    <string name="buttonMinus">-</string>
    <string name="buttonX">×</string>
    <string name="buttonDiv">÷</string>
    <string name="buttonEq">=</string>
    <string name="buttonPosNeg">±</string>
    <string name="buttonMR">MR</string>
    <string name="buttonMC">MC</string>
    <string name="buttonMPlus">M+</string>
    <string name="buttonMMinus">M-</string>
    <string name="buttonC">C</string>
    <string name="buttonBack">➣</string>
    <string name="inputStr">0</string>
    <string name="settings">Settings</string>
    <string name="changeTheme">Change dark theme</string>

</resources>