<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="8sp"
    android:layout_gravity="center_horizontal|top"
    android:background="@drawable/background">

    <Button
        android:id="@+id/button1"
        android:layout_width="72sp"
        android:layout_height="60sp"
        android:text="@string/button1"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="72sp"
        android:layout_height="60sp"
        android:layout_marginStart="4sp"
        android:text="@string/button2"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button0"
        app:layout_constraintStart_toEndOf="@+id/button1" />

    <Button
        android:id="@+id/button3"
        android:layout_width="72sp"
        android:layout_height="60sp"
        android:layout_marginStart="4sp"
        android:text="@string/button3"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonPt"
        app:layout_constraintStart_toEndOf="@+id/button2" />

    <Button
        android:id="@+id/button4"
        android:layout_width="72sp"
        android:layout_height="60sp"
        android:text="@string/button4"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="72sp"
        android:layout_height="60sp"
        android:layout_marginStart="4sp"
        android:text="@string/button5"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintStart_toEndOf="@+id/button4" />

    <Button
        android:id="@+id/button6"
        android:layout_width="72sp"
        android:layout_height="60sp"
        android:layout_marginStart="4sp"
        android:text="@string/button6"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintStart_toEndOf="@+id/button5" />

    <Button
        android:id="@+id/button7"
        android:layout_width="72sp"
        android:layout_height="60sp"
        android:text="@string/button7"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button8"
        android:layout_width="72dp"
        android:layout_height="60sp"
        android:layout_marginStart="4sp"
        android:text="@string/button8"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintStart_toEndOf="@+id/button7" />

    <Button
        android:id="@+id/button9"
        android:layout_width="72sp"
        android:layout_height="60sp"
        android:layout_marginStart="4sp"
        android:text="@string/button9"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintStart_toEndOf="@+id/button8" />

    <Button
        android:id="@+id/button0"
        android:layout_width="148sp"
        android:layout_height="60sp"
        android:layout_marginBottom="4sp"
        android:text="@string/button0"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonPt"
        android:layout_width="72sp"
        android:layout_height="60dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="4dp"
        android:text="@string/buttonPt"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button0" />

    <Button
        android:id="@+id/buttonAddition"
        android:layout_width="72sp"
        android:layout_height="120sp"
        android:layout_marginStart="4sp"
        android:layout_marginBottom="4sp"
        android:backgroundTint="#121657"
        android:text="@string/buttonAddition"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonPt" />

    <Button
        android:id="@+id/buttonX"
        android:layout_width="72sp"
        android:layout_height="60sp"
        android:layout_marginStart="4sp"
        android:backgroundTint="#121657"
        android:text="@string/buttonX"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonAddition"
        app:layout_constraintStart_toEndOf="@+id/button6" />

    <Button
        android:id="@+id/buttonPosNeg"
        android:layout_width="72sp"
        android:layout_height="60sp"
        android:layout_marginStart="4dp"
        android:backgroundTint="#121657"
        android:text="@string/buttonPosNeg"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonX"
        app:layout_constraintStart_toEndOf="@+id/button9" />

    <Button
        android:id="@+id/buttonEq"
        android:layout_width="72sp"
        android:layout_height="60sp"
        android:layout_marginStart="4sp"
        android:layout_marginBottom="4sp"
        android:backgroundTint="#121657"
        android:text="@string/buttonEq"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonAddition" />

    <Button
        android:id="@+id/buttonSubtraction"
        android:layout_width="72sp"
        android:layout_height="60sp"
        android:layout_marginStart="4sp"
        android:backgroundTint="#121657"
        android:text="@string/buttonSubtraction"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonEq"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonAddition" />

    <Button
        android:id="@+id/buttonDiv"
        android:layout_width="72sp"
        android:layout_height="60sp"
        android:layout_marginStart="4sp"
        android:backgroundTint="#121657"
        android:text="@string/buttonDiv"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonSubtraction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonX" />

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="72sp"
        android:layout_height="60sp"
        android:layout_marginStart="4sp"
        android:backgroundTint="#121657"
        android:rotationY="180"
        android:text="@string/buttonBack"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonDiv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonPosNeg" />

    <Button
        android:id="@+id/buttonMR"
        android:layout_width="72sp"
        android:layout_height="60sp"
        android:backgroundTint="#121657"
        android:text="@string/buttonMR"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonMC"
        android:layout_width="72sp"
        android:layout_height="60sp"
        android:layout_marginStart="4sp"
        android:backgroundTint="#121657"
        android:text="@string/buttonMC"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button8"
        app:layout_constraintStart_toEndOf="@+id/buttonMR" />

    <Button
        android:id="@+id/buttonMAdd"
        android:layout_width="72sp"
        android:layout_height="60sp"
        android:layout_marginStart="4sp"
        android:backgroundTint="#121657"
        android:text="@string/buttonMAdd"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button9"
        app:layout_constraintStart_toEndOf="@+id/buttonMC" />

    <Button
        android:id="@+id/buttonMSubtr"
        android:layout_width="72sp"
        android:layout_height="60sp"
        android:layout_marginStart="4sp"
        android:backgroundTint="#121657"
        android:text="@string/buttonMSubtr"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonPosNeg"
        app:layout_constraintStart_toEndOf="@+id/buttonMAdd" />

    <Button
        android:id="@+id/buttonC"
        android:layout_width="72sp"
        android:layout_height="60sp"
        android:layout_marginStart="4sp"
        android:backgroundTint="#B1134A"
        android:text="@string/buttonC"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonMSubtr" />

    <TextView
        android:id="@+id/result"
        android:layout_width="376sp"
        android:layout_height="120sp"
        android:layout_marginTop="8dp"
        android:padding="8sp"
        android:background="#D3C9C9"
        android:clickable="false"
        android:cursorVisible="true"
        android:fontFamily="monospace"
        android:gravity="top|right"
        android:saveEnabled="true"
        android:text="@string/result"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonMR"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>